HDFS-3243. TestParallelRead timing out on jenkins. Contributed by Henry Robinson.
(svn merge -c 1312029 from trunk)


git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1348257 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -177,6 +177,8 @@ Release 2.0.1-alpha - UNRELEASED
     (Henry Robinson via atm)
 
     HDFS-3514. Add missing TestParallelLocalRead. (Henry Robinson via atm)
+
+    HDFS-3243. TestParallelRead timing out on jenkins. (Henry Robinson via todd)
     
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
