svn merge -c 1348287 from trunk for HDFS-3490. DatanodeWebHdfsMethods throws NullPointerException if NamenodeRpcAddressParam is not set.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1348288 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -180,6 +180,9 @@ Release 2.0.1-alpha - UNRELEASED
 
     HDFS-3243. TestParallelRead timing out on jenkins. (Henry Robinson via todd)
     
+    HDFS-3490. DatanodeWebHdfsMethods throws NullPointerException if
+    NamenodeRpcAddressParam is not set.  (szetszwo)
+
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
     HDFS-2185. HDFS portion of ZK-based FailoverController (todd)
