HADOOP-8368. Amendment to add entry in CHANGES.txt
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1348961 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -37,6 +37,8 @@ Release 2.0.1-alpha - UNRELEASED
     HADOOP-8244. Improve comments on ByteBufferReadable.read. (Henry Robinson
     via atm)
 
+    HADOOP-8368. Use CMake rather than autotools to build native code (ccccabe via tucu)
+
   BUG FIXES
 
     HADOOP-8372. NetUtils.normalizeHostName() incorrectly handles hostname
