HDFS-3517. TestStartup should bind ephemeral ports. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1349005 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -186,6 +186,8 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-2797. Fix misuses of InputStream#skip in the edit log code.
     (Colin Patrick McCabe via eli)
 
+    HDFS-3517. TestStartup should bind ephemeral ports. (eli)
+
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
     HDFS-2185. HDFS portion of ZK-based FailoverController (todd)
