HDFS-3520. Add transfer rate logging to TransferFsImage. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1349118 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -68,6 +68,8 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3052. Change INodeFile and INodeFileUnderConstruction to package
     private.  (szetszwo)
 
+    HDFS-3520. Add transfer rate logging to TransferFsImage. (eli)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
