HDFS-766. Error message not clear for set space quota out of boundary values. Contributed by Jon Zuanich.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1349640 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -210,6 +210,9 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3531. EditLogFileOutputStream#preallocate should check for
     incomplete writes. (Colin Patrick McCabe via eli)
 
+    HDFS-766. Error message not clear for set space quota out of boundary
+    values. (Jon Zuanich via atm)
+
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
     HDFS-2185. HDFS portion of ZK-based FailoverController (todd)
