--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -91,6 +91,9 @@ Release 2.0.1-alpha - UNRELEASED
     HADOOP-8507. Avoid OOM while deserializing DelegationTokenIdentifer.
     (Colin Patrick McCabe via eli)
 
+    HADOOP-8433. Don't set HADOOP_LOG_DIR in hadoop-env.sh.
+    (Brahma Reddy Battula via eli)
+
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
     HADOOP-8220. ZKFailoverController doesn't handle failure to become active
