--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -213,6 +213,8 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-766. Error message not clear for set space quota out of boundary
     values. (Jon Zuanich via atm)
 
+    HDFS-3480. Multiple SLF4J binding warning. (Vinay via eli)
+
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
     HDFS-2185. HDFS portion of ZK-based FailoverController (todd)
