svn merge -c 1350384 from trunk for HDFS-3524. Update TestFileLengthOnClusterRestart for HDFS-3522.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1350385 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -215,6 +215,9 @@ Release 2.0.1-alpha - UNRELEASED
 
     HDFS-3480. Multiple SLF4J binding warning. (Vinay via eli)
 
+    HDFS-3524. Update TestFileLengthOnClusterRestart for HDFS-3522.  (Brandon
+    Li via szetszwo)
+
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
     HDFS-2185. HDFS portion of ZK-based FailoverController (todd)
