svn merge -c 1353800 from trunk for HDFS-3516. Check content-type in WebHdfsFileSystem.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1353802 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -80,6 +80,8 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3372. offlineEditsViewer should be able to read a binary
     edits file with recovery mode. (Colin Patrick McCabe via eli)
 
+    HDFS-3516. Check content-type in WebHdfsFileSystem.  (szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
