svn merge -c 1355019 FIXES: HADOOP-8535. Cut hadoop build times in half (Job Eagles via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1355020 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -522,6 +522,8 @@ Release 0.23.3 - UNRELEASED
     HADOOP-8288. Remove references of mapred.child.ulimit etc. since they are
     not being used any more (Ravi Prakash via bobby)
 
+    HADOOP-8535. Cut hadoop build times in half (Job Eagles via bobby)
+
   OPTIMIZATIONS
 
   BUG FIXES
