svn merge -c 1355124 FIXES: MAPREDUCE-4376. TestClusterMRNotification times out (Kihwal Lee via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1355125 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -71,6 +71,8 @@ Release 2.0.1-alpha - UNRELEASED
 
     MAPREDUCE-4372. Deadlock in Resource Manager (Devaraj K via bobby)
 
+    MAPREDUCE-4376. TestClusterMRNotification times out (Kihwal Lee via bobby)
+
 Release 2.0.0-alpha - 05-23-2012
 
   INCOMPATIBLE CHANGES
