MAPREDUCE-4383. HadoopPipes.cc needs to include unistd.h. Contributed by Andy Isaacson
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1355557 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -73,6 +73,9 @@ Release 2.0.1-alpha - UNRELEASED
 
     MAPREDUCE-4376. TestClusterMRNotification times out (Kihwal Lee via bobby)
 
+    MAPREDUCE-4383. HadoopPipes.cc needs to include unistd.h.
+    (Andy Isaacson via eli)
+
 Release 2.0.0-alpha - 05-23-2012
 
   INCOMPATIBLE CHANGES
