svn merge -c 1355766 from trunk. Backport of MAPREDUCE-4253. Tests for mapreduce-client-core are lying under mapreduce-client-jobclient. Contributed by Tsuyoshi Ozawa. (harsh)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1355772 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -17,6 +17,9 @@ Release 2.0.1-alpha - UNRELEASED
     MAPREDUCE-3921. MR AM should act on node health status changes. 
     (Bikas Saha via sseth)
 
+    MAPREDUCE-4253. Tests for mapreduce-client-core are lying under
+    mapreduce-client-jobclient (Tsuyoshi Ozawa via harsh)
+
   OPTIMIZATIONS
 
   BUG FIXES
