HADOOP-8538. CMake builds fail on ARM. Contributed by Trevor Robinson
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1356042 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -118,6 +118,8 @@ Release 2.0.1-alpha - UNRELEASED
     HADOOP-8438. hadoop-validate-setup.sh refers to examples jar file which doesn't exist
     (Devaraj K via umamahesh)
 
+    HADOOP-8538. CMake builds fail on ARM. (Trevor Robinson via eli)
+
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
     HADOOP-8220. ZKFailoverController doesn't handle failure to become active
