HDFS-3343. Improve metrics for DN read latency. Contributed by Andrew Wang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1356930 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -94,6 +94,8 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3475. Make the replication monitor multipliers configurable.
     (harsh via eli)
 
+    HDFS-3343. Improve metrics for DN read latency (Andrew Wang via todd)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
