HDFS-3604. Add dfs.webhdfs.enabled to hdfs-default.xml. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1358660 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -99,6 +99,8 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3170. Add more useful metrics for write latency (Matthew Jacobs via
     todd)
 
+    HDFS-3604. Add dfs.webhdfs.enabled to hdfs-default.xml. (eli)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
