Backport of MAPREDUCE-2220. svn merge -c 1358788 from trunk. (harsh)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1358789 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -143,6 +143,9 @@ Release 2.0.0-alpha - 05-23-2012
 
     HADOOP-8285 MR changes for Use ProtoBuf for RpcPayLoadHeader (sanjay radia)
 
+    MAPREDUCE-2220. Fix new API FileOutputFormat-related typos in
+    mapred-default.xml (Rui Kubo via harsh)
+
   OPTIMIZATIONS
 
   BUG FIXES
