HDFS-3603. Decouple TestHDFSTrash from TestTrash. Contributed by Jason Lowe
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1358806 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -288,6 +288,8 @@ Release 2.0.1-alpha - UNRELEASED
     so that V conforms to boolean compiling HttpFSServer.java with OpenJDK 
     (adi2 via tucu)
 
+    HDFS-3603. Decouple TestHDFSTrash from TestTrash. (Jason Lowe via eli)
+
 Release 2.0.0-alpha - 05-23-2012
 
   INCOMPATIBLE CHANGES
