--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -277,6 +277,9 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-711. hdfsUtime does not handle atime = 0 or mtime = 0 correctly.
     (Colin Patrick McCabe via eli)
 
+    HDFS-3548. NamenodeFsck.copyBlock fails to create a Block Reader.
+    (Colin Patrick McCabe via eli)
+
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
     HDFS-2185. HDFS portion of ZK-based FailoverController (todd)
