HDFS-2391. Newly set BalancerBandwidth value is not displayed anywhere. Contributed by Harsh J
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1358850 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -104,6 +104,9 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-2988. Improve error message when storage directory lock fails
     (Miomir Boljanovic via harsh)
 
+    HDFS-2391. Newly set BalancerBandwidth value is not displayed anywhere.
+    (harsh)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
