Backport MAPREDUCE-3906 from trunk. svn merge -c 1358896 ../../trunk (harsh)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1358897 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -149,6 +149,9 @@ Release 2.0.0-alpha - 05-23-2012
     MAPREDUCE-3907. Document entries mapred-default.xml for the
     jobhistory server. (Eugene Koontz via harsh)
 
+    MAPREDUCE-3906. Fix inconsistency in documentation regarding
+    mapreduce.jobhistory.principal. (Eugene Koontz via harsh)
+
   OPTIMIZATIONS
 
   BUG FIXES
