svn merge -c 1359252 FIXES: MAPREDUCE-4402. TestFileInputFormat fails intermittently (Jason Lowe via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1359253 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -532,6 +532,9 @@ Release 0.23.3 - UNRELEASED
     space due to org.apache.hadoop.fs.LocalDirAllocator.contexts (Devaraj K
     via bobby)
 
+    MAPREDUCE-4402. TestFileInputFormat fails intermittently (Jason Lowe via
+    bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
